Making minor mods to layout and namespacing again. Added heading and subheading.

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Dominic Edhouse's Portfolio</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>
+	<strong>Dominic Edhouse</strong>
+	<br />
+	<small>Software Engineer</small>
+</h1>
 
-Welcome to your new app.
