--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Portfolio.WASM
-@using Portfolio.WASM.Shared
+@using Client
+@using Client.Shared
